# stream1090

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_ADV.md  README_DEB.md  RSSI.md  main.cpp  start.sh  start_airspy_6M.sh  start_airspy_6M_raw.sh  table_gen.cpp
configs/: airspy.ini  rtlsdr.ini
custom_filters/: 2_4_TO_8_0_experimental.txt  2_56_TO_8_0_experimental.txt  EU_caius_10_24.txt  EU_caius_10_24_taps_21_0.txt  EU_caius_10_24_taps_21_1.txt  EU_mgrone_6_12.txt  JRG1956_0.txt  OverrideFilterTaps.hpp
debian/: control  install  rules  stream1090.conf  stream1090.service
filter_utils/: closest_msg.py  dc_removal.py  decode_msg.py  diff_evolve_fir.py  eval_filter.py  filter_module.py  filter_opt.py  opt_filter.py  plot_filter.py  plot_filters.py  requirements.txt  simple_low_pass.py  simple_sweep.py
gain_mixer/: gain_mixer.py
include/: AVRWriter.hpp  Bits128.hpp  CRC.hpp  CRCErrorTable.hpp  CustomFilterTaps.hpp  DemodCore.hpp  Global.hpp  ICAOCache.hpp  IQPipeline.hpp  InputBufferReader.hpp  InputReader.hpp  InputReaderBase.hpp  InputStreamReader.hpp  LowPassFilter.hpp  LowPassFilterTaps.hpp  MainInstance.hpp  MathUtils.hpp  MessageHandler.hpp  ModeS.hpp  PlaneTable.hpp  Presets.hpp  RawInputFormat.hpp  RingBuffer.hpp  SampleStream.hpp  Sampler.hpp  SamplerFunc.hpp  ShiftRegisters.hpp  Stats.hpp  rtl_sdr_iq_sqrt_table.hpp
include/devices/: AirspyDevice.hpp  DeviceFactory.hpp  IniConfig.hpp  InputDeviceBase.hpp  RtlSdrDevice.hpp
other_utils/: dup_check.py  make_sqrt_rtl_sdr.py  plane_msg_stats.py  r82xx_gain_table.py
src/devices/: AirspyDevice.cpp  RtlSdrDevice.cpp
vis_util/: README.md  example_record.sh  vis_util.py  vis_util_module.py
